<resources>
    <string name="app_name">Login Form</string>
    <string name="login_form">Login Form</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="submit">Submit</string>
    <string name="welcome_to_home_activity">Welcome to Home Activity</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="todo">TODO</string>
</resources>